--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,7 +4,34 @@
 }
 <h1 class="h3"><span class="far fa-newspaper"></span></h1>
 <h3>
-    October 13th, 2020
+    December 23rd, 2020
+</h3>
+<h5>&#10052; &#10052; &#10052; Happy Holidays &#10052; &#10052; &#10052;</h5>
+<p>
+    Snow is coming down outside, so no sailing means more time for updates to SailScores.
+</p>
+<p>
+    <strong>Many Admin page tweaks</strong> The design of the Club admin page has been updated to
+    keep things easier to use and better fit on mobile devices. Other pages on the site may be
+    getting similar updates as they are changed.
+</p>
+<p>
+    <strong>Browser Analytics</strong> Registered users may now select "Enable Browser Analytics"
+    which will send more information about delays and script errors on our pages to SailScores.
+    This is not advertising tracking: the information from this setting will only go
+    to SailScores.
+</p>
+<p>
+    <strong>Dark mode</strong> is now supported. SailScores now uses your browser setting to determine whether
+    a light background or dark background should be used. (Many browsers will use the operating
+    system setting for this.)
+</p>
+<p>
+    Still more work to do. If you're interested in all the details, watch the code at Github.
+</p>
+<br />
+<h3>
+    October 13th, 2020 
 </h3>
 <h5>Summer's over</h5>
 <p>
@@ -30,7 +57,7 @@
     in importing results from other systems, so time has been spent on better stats
     reporting and improving the result entry UI.
 </p>
-<br/>
+<br />
 <h3>
     April 30th, 2020
 </h3>
@@ -42,7 +69,7 @@
     name in series results. Let us know what you think and if there's a stat you
     think would be useful, please let us know.
 </p>
-<br/>
+<br />
 <h3>
     March 14th, 2020
 </h3>
@@ -56,7 +83,7 @@
     But for the next few months feature updates will slow down. We're working on a mobile app to support
     offline score entry integrated with this site.
 </p>
-<br/>
+<br />
 <h3>
     January 23rd, 2020
 </h3>
@@ -67,7 +94,7 @@
     conditions when you enter race results. The weather conditions will be displayed in the
     headers of series results, with a wind direction arrow, wind speed and selected icon.
 </p>
-<br/>
+<br />
 <h3>
     November 26th, 2019
 </h3>
@@ -89,7 +116,7 @@
     Guidance for newly setup clubs is now provided as on-page tips suggesting activities
     that should be completed for race scoring.
 </p>
-<br/>
+<br />
 <h3>
     November 19th, 2019
 </h3>
@@ -109,7 +136,7 @@
     Guidance for newly setup clubs is now provided as on-page tips suggesting activities
     that should be completed for race scoring.
 </p>
-<br/>
+<br />
 <h3>
     October 13th, 2019
 </h3>
@@ -118,7 +145,7 @@
 <p>
     Series with more than one race can show a chart with the trend of competitors' rankings.
 </p>
-<br/>
+<br />
 <h3>
     September 3rd, 2019
 </h3>
@@ -131,7 +158,7 @@
     A regatta will have fleets of competitors different from the usual club fleets, and will show
     competitors' home clubs.
 </p>
-<br/>
+<br />
 <h3>
     August 16th, 2019
 </h3>
@@ -141,7 +168,7 @@
 </p><p>
     Historical series can lock results, so that changes in the scoring system or the races will no longer change the series.
 </p>
-<br/>
+<br />
 <h3>
     August 10th, 2019
 </h3>
@@ -166,7 +193,7 @@
     Also some enhancements have been made to support long series: helm name is now
     shown every 25 races and as the last column of the results.
 </p>
-<br/>
+<br />
 <h3>
     June 7th, 2019 Update
 </h3>
