--- a/SailScores.Web/Views/Home/Privacy.cshtml
+++ b/SailScores.Web/Views/Home/Privacy.cshtml
@@ -180,8 +180,8 @@
         and improve the effectiveness of our Services; to monitor and prevent any problems with
         our Services; or</p>
     <p>(5) You have given us your consent — for example, information is submitted after the "Save" or
-        similar button is pressed. 
-    </p>
+        similar button is pressed, and browser tracking is enabled only when a registered user
+        selects the "Enable Browser Analytics" option in their user profile.</p>
 </section>
 <section id="sharing-information">
     <h3>Sharing Information</h3>
@@ -224,7 +224,7 @@
         <li>
             <strong>With your consent:</strong> We may share and disclose information with your
             consent or at your direction. For example, we may share your information with third parties
-            when you authorize us to do so, like when you connected your site to another service, such as
+            when you authorize us to do so, like when you connect your site to another service, such as
             Slack.
         </li>
         <li>
@@ -244,7 +244,7 @@
     <h4><i>Information Shared Publicly</i></h4>
     <p>Information that you choose to make public is — you guessed it — disclosed publicly.</p>
     <p>
-        That means information like your public profile, posts, other content that you make public
+        That means information like your public profile, scores, other content that you make public
         on your club's pages are all available to others
         — and we hope they get a lot of views!
     </p>
@@ -295,16 +295,9 @@
         </li>
         <li>
             <strong>Opt out of marketing communications:</strong> You may opt out of receiving
-            promotional communications from us. Just follow the instructions in those communications or
-            let us know. If you opt out of promotional communications, we may still send you other
+            occasional update communications from us. Just follow the instructions in those communications or
+            let us know. If you opt out of optional communications, we may still send you other
             communications, like those about your account and legal notices.
-        </li>
-        <li>
-            <strong>Set your browser to reject cookies:</strong> At this time, SailScores does not
-            respond to “do not track” signals across all of our Services. However, you can use the
-            settings of your browser to remove or reject browser cookies before using SailScores’ website,
-            with the drawback that certain features of SailScores may not function properly without
-            the aid of cookies.
         </li>
         <li>
             <strong>Close your account:</strong> While we’d be sad to see you go, you can
@@ -456,6 +449,8 @@
 <section id="change-log">
     <h3>Change log</h3>
     <ul>
+        <li><em>December 23, 2020: </em>Removed reference to blocking cookies with browser. Most users
+        will not receive cookies from SailScores. We use minimal cookies to track logged in users.</li>
         <li><em>December 17, 2020: </em>Initial version of this policy shared.</li>
     </ul>
 </section>
