--- a/SailScores.Web/Views/_ViewImports.cshtml
+++ b/SailScores.Web/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using SailScores.Identity.Entities
 @using SailScores.Web.Resources;
 @using SailScores.Web.Services;
+@using SailScores.Web.Models.SailScores;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SailScores.Web
