--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#regattas">Regattas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#scorekeepers">Scorekeepers</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -87,7 +90,7 @@
             <div class="col-8 col-md-10">
                 @if (Model.IsHidden)
                 {
-                <span class="text-warning">Not listed on SailScores front page.</span>
+                    <span class="text-warning">Not listed on SailScores front page.</span>
                 }
             </div>
         </div>
@@ -139,6 +142,8 @@
 @await Html.PartialAsync("_ScoringSystems", Model.ScoringSystems)
 <br />
 @await Html.PartialAsync("_RegattaList", Model.Regattas)
+<br />
+@await Html.PartialAsync("_UserList", Model.Users)
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
