--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,13 @@
     <meta name="msapplication-TileImage" content="~/images/favicon/mstile-144x144.png">
     <meta name="color-scheme" content="light dark">
 
+
+    @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+    @inject AppSettingsService SettingsService
+    <base href="@settingsService.GetPreferredBase(HttpContextAccessor.HttpContext.Request)" />
+    <link rel="canonical" href="@settingsService.GetPreferredUri(HttpContextAccessor.HttpContext.Request)" />
+
+
     <title>@ViewData["Title"]</title>
     @if (!String.IsNullOrWhiteSpace((String)ViewData["MetaDescription"]))
     {
@@ -49,7 +56,7 @@
             @Html.Raw(JavaScriptSnippet.FullScript)
         }
     }
-    </head>
+</head>
 <body>
     <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bg-dark">
         <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SailScores.com</a>
