--- a/SailScores.Web/Views/Account/Login.cshtml
+++ b/SailScores.Web/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
     <div class="col-md-6 col-xl-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h4>Use a SailScores account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
