--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,6 +4,35 @@
 }
 <h1 class="h3"><span class="far fa-newspaper"></span></h1>
 <h3>
+    January 1st, 2021
+</h3>
+<h5>Happy New Year!</h5>
+<p>
+    New <a href="https://www.sailing.org/documents/racingrules/index.php" target="_blank">Racing
+    Rules of Sailing (RRS)</a> became effective today, January 1. There are a couple of minor
+    changes to scoring in the new rules. SailScores has been updated to be in compliance
+    with the new rules.
+    <ul>
+        <li>
+            <strong>New Score Code: <em>NSC</em>: Did not sail the course.</strong> This 
+            code may be used by the race committee that observed a boat not completing the course
+            correctly. Previously, the Race Committee needed to either protest the boat
+            or score them as DNF: did not finish. From a scoring perspective, this code
+            is treated the same as "DNF."
+            SailScores' scoring systems now have <em>NSC</em> as a scoring code.
+        </li>
+        <li>
+            <strong>Series scoring rule A9 becomes rule 5.3 and has been slightly reworded.</strong>
+            Previously rule A9 described how scoring could be changed for a "series longer
+            than a regatta." This rule has been moved to A5.3, and now indicates that the
+            Sailing Instructions must state that rule A5.3 will apply to be in effect. To
+            accommodate this, SailScores default scoring system is now called "Appendix A
+            For Series - Rule 5.3"
+        </li>
+    </ul>
+</p>
+<br />
+<h3>
     December 23rd, 2020
 </h3>
 <h5>&#10052; &#10052; &#10052; Happy Holidays &#10052; &#10052; &#10052;</h5>
@@ -31,7 +60,7 @@
 </p>
 <br />
 <h3>
-    October 13th, 2020 
+    October 13th, 2020
 </h3>
 <h5>Summer's over</h5>
 <p>
