Add better validation on competitor

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "SailScores News";
     ViewData["MetaDescription"] = "Latest news about SailScores";
 }
-<h1 class="h3"><span class="far fa-newspaper"></span></h1>
+<h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
 <h3>
     January 1st, 2021
 </h3>
