--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -7,12 +7,10 @@
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>Edit</h2>
-
-<h4>Competitor</h4>
+<h2>Edit Competitor</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-lg-4">
         <form asp-action="Edit">
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ClubId" />
