Code gloassary added to series results
MouseOver / title text for score codes in series results
closes SailScores/SailScores#202

--- a/SailScores.Web/Views/Series/ExportHtml.cshtml
+++ b/SailScores.Web/Views/Series/ExportHtml.cshtml
@@ -58,6 +58,8 @@
             @{ ViewData["IsExport"] = true; }
 
             @await Html.PartialAsync("_ResultsTable", Model)
+
+            @await Html.PartialAsync("_CodeGlossary", Model)
             <br />
             <div class="row">
                 @if (Model.UpdatedDate.HasValue)
