--- a/SailScores.Web/Views/Home/Privacy.cshtml
+++ b/SailScores.Web/Views/Home/Privacy.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
+    ViewData["MetaDescription"] = "Detailed privacy policy for SailScores.com";
 }
 <h1 class="h2">@ViewData["Title"]</h1>
 <p>Your privacy is important to us. SailScores follows a few fundamental principles:</p>
