--- a/SailScores.Web/Views/Series/ExportHtml.cshtml
+++ b/SailScores.Web/Views/Series/ExportHtml.cshtml
@@ -31,6 +31,8 @@
     }
     @await Html.EmbedCss($"css{System.IO.Path.DirectorySeparatorChar}site.min.css")
     @*<inline-style href="css/site.min.css" />*@
+    3
+    <meta name="robots" content="noindex">
 </head>
 <body>
     <div class="body-content">
